# flappybird2

./: Cargo.toml  README.md
src/: main.rs
src/game/: mod.rs
src/game/bird/: mod.rs
src/game/cloud/: mod.rs
src/game/pipe_spawner/: mod.rs
src/game/ui/: mod.rs
src/mainmenu/: mod.rs
